[package]
name = "netcheck"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "netcheck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.2.3", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.36", features = ["full"] }
x509-parser = "0.16.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.11"
webpki-roots = "0.26"
rustls = "0.23"
tokio-rustls = "0.26"
trust-dns-resolver = { version = "0.23.2", features = ["tokio-runtime"] }
tauri-plugin-http = "2"
tauri-plugin-log = "2"
log = "0.4"
